# SWE-lab-Spring-2025

A1/: 23CS30048_week1_q1.cpp  23CS30048_week1_q2.cpp  new_users.txt  users.txt
A2/lists_in_cpp/: a.out  list.cpp  list.h  test_list.cpp
A2/simple_unit_test/: main  main.cpp  operations.h  test  test.cpp
A4/monty_hall/: CMakeLists.txt  a.out  main.cpp
A4/monty_hall/include/: MontyHallGame.h
A4/monty_hall/src/: MontyHallGame.cpp
A4/my_string/: CMakeLists.txt
A4/my_string/include/: str.h
A4/my_string/src/: a.out  str.cpp
A4/my_string/tests/: tests.cpp
A4/problem1/: CMakeLists.txt  main.cpp
A4/problem1/include/: hello_world.h
A4/problem1/src/: hello_world.cpp
A4/problem1/tests/: test_hello_world.cpp
A5/: A5-23CS30048.ipynb
A6/: A6-23cs30048.ipynb
A7/: A7-23CS30048.ipynb
A8/: A8-23CS30048.ipynb
